--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="main.css">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css">
-		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 	
 		<title>Benjamin Dinh</title>
-		<link rel="icon" href="assets/faviconnew.png">
+		<link rel="zoom" href="assets/faviconnew.png">
     </head>
     
 	<body>
@@ -39,16 +38,16 @@
 			</nav>
 		</div>
 		<div id="rightIcons">
-			<a href="https://www.linkedin.com/in/benjamin-dinh/" class="fab fa-linkedin"></a>
-			<a href="https://github.com/benjamin-dinh" class="fab fa-github"></a>
-			<a href="https://www.behance.net/gallery/99370465/Personal-Art" class="fab fa-behance"></a>
-			<a href="https://www.instagram.com/tiggersparty/" class="fab fa-instagram"></a>
-			<a href="mailto:benjamindinh909@gmail.com" class="fa fa-envelope"></a>
+			<a href="https://www.linkedin.com/in/benjamin-dinh/" class="fab fa-linkedin zoom"></a>
+			<a href="https://github.com/benjamin-dinh" class="fab fa-github zoom"></a>
+			<a href="https://www.behance.net/gallery/99370465/Personal-Art" class="fab fa-behance zoom"></a>
+			<a href="https://www.instagram.com/tiggersparty/" class="fab fa-instagram zoom"></a>
+			<a href="mailto:benjamindinh909@gmail.com" class="fa fa-envelope zoom"></a>
 			<div class="vl"></div>
 		</div>
 		
 		<section id="header">
-			<div id="headerText" class="flyin">
+			<div id="headerText" class="fadein">
 			  	<h1>Hi, my name is 
 				  <b id="name">Benjamin</b>
 				  <br> I am a software developer.
@@ -61,10 +60,10 @@
 		</div>
 		<a id="work"></a>
 		<section>
-			<p id = "projectSectionTitle" data-aos="fade-up">RECENTS</p>
+			<p id = "projectSectionTitle">RECENTS</p>
 			<div id="projectContainer">
 				<div class="row">
-					<div class = "projectSelect" data-aos="fade-up">
+					<div class = "projectSelect">
 						<div>
 							<h2>Tweet Sentiment Analysis</h2>
 							<p class="subtitle_bold">An NLP model that classifies tweets based on polarity of opinion</p>
@@ -78,11 +77,11 @@
 								<div class="projecttag">Sklearn</div>
 							</div>
 							<div class="projectbuttons">
-								<a class="fab fa-github" href="https://github.com/benjamin-dinh/tweet-sentiment-analysis/blob/main/tweet_sentiment_analysis.ipynb"></a>
+								<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/tweet-sentiment-analysis/blob/main/tweet_sentiment_analysis.ipynb"></a>
 							</div>
 						</div>
 					</div>
-					<div class = "projectSelect" data-aos="fade-up">
+					<div class = "projectSelect">
 						<div>
 							<h2>AggieFeed</h2>
 							<p class="subtitle_bold">An Android application that delivers the latest university news</p>
@@ -96,13 +95,13 @@
 								<div class="projecttag">GSON</div>
 							</div>
 							<div class="projectbuttons">
-								<a class="fab fa-github" href="https://github.com/benjamin-dinh/IETAndroidAppProject"></a>
+								<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/IETAndroidAppProject"></a>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="row">
-					<div class = "projectSelect" data-aos="fade-up">
+					<div class = "projectSelect">
 						<div>
 							<h2>includedavis.com</h2>
 							<p class="subtitle_bold">A user focused redesign of #include's club website</p>
@@ -116,12 +115,12 @@
 								<div class="projecttag">NodeJS</div>
 							</div>
 							<div class="projectbuttons">
-								<a class="fab fa-github" href="https://github.com/benjamin-dinh/include-website"></a>
-								<a class="fas fa-external-link-alt" href="https://include-website.herokuapp.com/"></a>
+								<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/include-website"></a>
+								<a class="fas fa-external-link-alt zoom" href="https://include-website.herokuapp.com/"></a>
 							</div>
 						</div>
 					</div>
-					<div class = "projectSelect" data-aos="fade-up">
+					<div class = "projectSelect">
 						<div>
 							<h2>UC Davis Yearbook</h2>
 							<p class="subtitle_bold">A place to virtually store memories for the Class of 2020</p>
@@ -135,8 +134,8 @@
 								<div class="projecttag">Figma</div>
 							</div>
 							<div class="projectbuttons">
-								<a class="fab fa-github" href="https://github.com/benjamin-dinh/ucdavis-yearbook"></a>
-								<a class="fas fa-external-link-alt" href="https://hazel-boundless-yearbook.glitch.me"></a>
+								<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/ucdavis-yearbook"></a>
+								<a class="fas fa-external-link-alt zoom" href="https://hazel-boundless-yearbook.glitch.me"></a>
 							</div>
 						</div>
 					</div>
@@ -144,10 +143,10 @@
 			</div>
 		</section>
 		<section id="archive">
-			<p id = "projectSectionTitle" data-aos="fade-up">MORE FUN PROJECTS</p>
+			<p id = "projectSectionTitle">MORE FUN PROJECTS</p>
 			<div id = "projectArchiveContainer">
 				<div class="acc">
-					<div class="projectArchive" data-aos="fade-up">
+					<div class="projectArchive">
 						<div class="acc__title">
 							<div>
 								<h2>Fruit Classification</h2>
@@ -165,12 +164,12 @@
 									<div class="projecttag">Sklearn</div>
 								</div>
 								<div class="projectbuttons">
-									<a class="fab fa-github" href="https://github.com/benjamin-dinh/fruit-classification/blob/main/fruit_classification.ipynb"></a>
+									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/fruit-classification/blob/main/fruit_classification.ipynb"></a>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="projectArchive" data-aos="fade-up">
+					<div class="projectArchive">
 						<div class="acc__title">
 							<div>
 								<h2>IMDb Web Scraper</h2>
@@ -188,12 +187,12 @@
 									<div class="projecttag">BeautifulSoup</div>
 								</div>
 								<div class="projectbuttons">
-									<a class="fab fa-github" href="https://github.com/benjamin-dinh/imdb-webscraper/blob/main/imdb_webscraper.ipynb"></a>
+									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/imdb-webscraper/blob/main/imdb_webscraper.ipynb"></a>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="projectArchive" data-aos="fade-up">
+					<div class="projectArchive">
 						<div class="acc__title">
 							<div>
 								<h2>Museum Exhibit Display</h2>
@@ -212,15 +211,15 @@
 									<div class="projecttag">JavaScript</div>
 								</div>
 								<div class="projectbuttons">
-									<a class="fab fa-github" href="https://github.com/benjamin-dinh/museum-website"></a>
-									<a class="fas fa-external-link-alt" href="https://shore-conscious-supply.glitch.me/"></a>
+									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/museum-website"></a>
+									<a class="fas fa-external-link-alt zoom" href="https://shore-conscious-supply.glitch.me/"></a>
 								</div>
 							</div>
 						</div>
 					</div>
 			  	</div>
 				<div class="acc">
-					<div class="projectArchive" data-aos="fade-up">
+					<div class="projectArchive">
 						<div class="acc__title">
 							<div>
 								<h2>Automobile Price Predictor</h2>
@@ -239,12 +238,12 @@
 									<div class="projecttag">Sklearn</div>
 								</div>
 								<div class="projectbuttons">
-									<a class="fab fa-github" href="https://github.com/benjamin-dinh/automobile-price-regression/blob/main/regression_models.ipynb"></a>
+									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/automobile-price-regression/blob/main/regression_models.ipynb"></a>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="projectArchive" data-aos="fade-up">
+					<div class="projectArchive">
 						<div class="acc__title">
 							<div>
 								<h2>Postcard Creator</h2>
@@ -265,13 +264,13 @@
 									<div class="projecttag">SQLite3</div>
 								</div>
 								<div class="projectbuttons">
-									<a class="fab fa-github" href="https://github.com/benjamin-dinh/postcard-creator-v2"></a>
-									<a class="fas fa-external-link-alt" href="https://foggy-climbing-carob.glitch.me/"></a>
+									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/postcard-creator-v2"></a>
+									<a class="fas fa-external-link-alt zoom" href="https://foggy-climbing-carob.glitch.me/"></a>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="projectArchive" data-aos="fade-up">
+					<div class="projectArchive">
 						<div class="acc__title">
 							<div>
 								<h2>Spellchecker</h2>
@@ -288,7 +287,7 @@
 									<div class="projecttag">C++</div>
 								</div>
 								<div class="projectbuttons">
-									<a class="fab fa-github" href="https://github.com/benjamin-dinh/spellchecker-trie"></a>
+									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/spellchecker-trie"></a>
 								</div>
 							</div>
 						</div>
@@ -298,8 +297,8 @@
 		</section>
 
 		<section id="about">
-			<p id = "projectSectionTitle" data-aos="fade-up">ABOUT ME</p>
-			<div id="profileContainer" data-aos="fade-up">
+			<p id = "projectSectionTitle">ABOUT ME</p>
+			<div id="profileContainer">
 				<div id="profileText">
 					<h2 class="customsubtitle">Nice to meet you!</h2>
 					<p class="subtitle">I'm Benjamin and I'm a third year at University of California, Davis studying Computer Science with an intended minor in Communications. My interests lie in making technology widely accessible and delivering unique product experiences.</p>
@@ -324,10 +323,7 @@
 		</section>
 		
 		<script src="script.js"></script>
-		<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-		<script>
-			AOS.init();
-		</script>
+
 		<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 		<script>
