website redesign complete ✨

--- a/index.html
+++ b/index.html
@@ -314,12 +314,12 @@
 		
 		<section id="footer">
 			<div id="bottomIcons">
-				<a href="https://www.linkedin.com/in/benjamin-dinh/" class="fab fa-linkedin"></a>
-				<a href="https://github.com/benjamin-dinh" class="fab fa-github"></a>
-				<a href="https://www.behance.net/benjamin-dinh" class="fab fa-behance"></a>
-				<a href="mailto:benjamindinh909@gmail.com" class="fa fa-envelope"></a>
+				<a href="https://www.linkedin.com/in/benjamin-dinh/" class="fab fa-linkedin zoom"></a>
+				<a href="https://github.com/benjamin-dinh" class="fab fa-github zoom"></a>
+				<a href="https://www.behance.net/benjamin-dinh" class="fab fa-behance zoom"></a>
+				<a href="mailto:benjamindinh909@gmail.com" class="fa fa-envelope zoom"></a>
 			</div>
-			<p id ="footerFont">© 2020 Benjamin Dinh </p>
+			<p id ="footerFont">© Benjamin Dinh 2020</p>
 		</section>
 		
 		<script src="script.js"></script>
