website redesign complete ✨

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<a href="https://www.linkedin.com/in/benjamin-dinh/" class="fab fa-linkedin zoom"></a>
 			<a href="https://github.com/benjamin-dinh" class="fab fa-github zoom"></a>
 			<a href="https://www.behance.net/gallery/99370465/Personal-Art" class="fab fa-behance zoom"></a>
-			<a href="https://www.instagram.com/tiggersparty/" class="fab fa-instagram zoom"></a>
+			<!-- <a href="https://www.instagram.com/tiggersparty/" class="fab fa-instagram zoom"></a> -->
 			<a href="mailto:benjamindinh909@gmail.com" class="fa fa-envelope zoom"></a>
 			<div class="vl"></div>
 		</div>
