website redesign complete ✨

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
-				<div class="collapse navbar-collapse" id="navbarResponsive">
+				<div class="collapse navbar-collapse" id="navbarResponsive" data-toggle="collapse" data-target=".navbar-collapse">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item">
 							<a class="nav-link js-scroll-trigger" href="#work">Work</a>
@@ -41,7 +41,7 @@
 			<a href="https://www.linkedin.com/in/benjamin-dinh/" class="fab fa-linkedin zoom"></a>
 			<a href="https://github.com/benjamin-dinh" class="fab fa-github zoom"></a>
 			<a href="https://www.behance.net/gallery/99370465/Personal-Art" class="fab fa-behance zoom"></a>
-			<!-- <a href="https://www.instagram.com/tiggersparty/" class="fab fa-instagram zoom"></a> -->
+			<a href="https://www.instagram.com/tiggersparty/" class="fab fa-instagram zoom"></a>
 			<a href="mailto:benjamindinh909@gmail.com" class="fa fa-envelope zoom"></a>
 			<div class="vl"></div>
 		</div>
@@ -317,6 +317,7 @@
 				<a href="https://www.linkedin.com/in/benjamin-dinh/" class="fab fa-linkedin zoom"></a>
 				<a href="https://github.com/benjamin-dinh" class="fab fa-github zoom"></a>
 				<a href="https://www.behance.net/benjamin-dinh" class="fab fa-behance zoom"></a>
+				<a href="https://www.instagram.com/tiggersparty/" class="fab fa-instagram zoom"></a>
 				<a href="mailto:benjamindinh909@gmail.com" class="fa fa-envelope zoom"></a>
 			</div>
 			<p id ="footerFont">© Benjamin Dinh 2020</p>
