website redesign complete ✨

--- a/index.html
+++ b/index.html
@@ -295,8 +295,8 @@
 			  	</div>
 			</div>	
 		</section>
-
-		<section id="about">
+		<a id="about"></a>
+		<section>
 			<p id = "projectSectionTitle">ABOUT ME</p>
 			<div id="profileContainer">
 				<div id="profileText">
