website redesign complete ✨

--- a/index.html
+++ b/index.html
@@ -295,8 +295,7 @@
 			  	</div>
 			</div>	
 		</section>
-		<a id="about"></a>
-		<section>
+		<section id="about">
 			<p id = "projectSectionTitle">ABOUT ME</p>
 			<div id="profileContainer">
 				<div id="profileText">
