--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 							<h2>Tweet Sentiment Analysis</h2>
 							<p class="subtitle_bold">An NLP model that classifies tweets based on polarity of opinion</p>
 							<p class="subtitle_date">DECEMBER 2020</p>
-							<p class="subtitle">Cleaned, normalized, and tokenized words US airline tweets and created a term frequency-inverse document frequency (TF-IDF) matrix. Split the data into testing/training sets and performed logistic regression. Yielded an overall 80% accuracy rate.</p>
+							<p class="subtitle">Cleaned, normalized, and tokenized US airline tweets and created a term frequency-inverse document frequency (TF-IDF) matrix. Split the data into testing/training sets and performed logistic regression. Yielded an overall 80% accuracy rate.</p>
 						</div>
 						<div class="buttonrow">
 							<div class ="tagrow">
@@ -106,7 +106,7 @@
 							<h2>includedavis.com</h2>
 							<p class="subtitle_bold">A user focused redesign of #include's club website</p>
 							<p class="subtitle_date">AUGUST 2020</p>
-							<p class="subtitle">Communicated with the lead designer to understand necessary revisions to improve the usability, look, and feel of the old website. Worked with the back end director and achieved a new landing page, club calendar, testimonial section, and mobile responsivity.</p>
+							<p class="subtitle">Communicated with the lead designer to understand necessary revisions to improve the usability, look, and feel of the old website. Worked with the back end director and achieved a new landing page, club calendar, testimonial section, and mobile responsivity. Achieved 50% increase in website traffic.</p>
 						</div>
 						<div class="buttonrow">
 							<div class ="tagrow">
@@ -125,7 +125,7 @@
 							<h2>UC Davis Yearbook</h2>
 							<p class="subtitle_bold">A place to virtually store memories for the Class of 2020</p>
 							<p class="subtitle_date">MAY 2020</p>
-							<p class="subtitle">Directed a group of 3 web developers in building a website where users can upload personal profiles onto a virtual yearbook. Developed wireframes and assessed the UI and UX for technical feasibility. Used React to make page components and learned how to employ states and props. </p>
+							<p class="subtitle">Directed a group of 3 web developers in building a website where users can upload personal profiles onto a virtual yearbook. Developed wireframes and assessed the UI and UX for technical feasibility. Used React to make page components and learned how to utilize states and props. </p>
 						</div>
 						<div class="buttonrow">
 							<div class ="tagrow">
@@ -157,7 +157,7 @@
 							</div>
 						</div>
 						<div class="acc__panel">
-							<p class="subtitle">A model that predicts fruit names based on mass, width, height, and color. Used logistic regression and decision trees to build models. Plotted decision boundaries for each model for comparison and concluded that decision trees created better boundaries between apples, oranges, mandarins, and lemons. </p>
+							<p class="subtitle">A model that predicts fruit names based on mass, width, height, and color. Used logistic regression and decision trees to build models. Plotted decision boundaries to compare each model and concluded that decision trees created better boundaries between apples, oranges, mandarins, and lemons. The decision tree and logistic regression models achieved 84% and 75% accuracy rates respectively.</p>
 							<div class="buttonrow">
 								<div class ="tagrow">
 									<div class="projecttag">Python</div>
@@ -180,7 +180,7 @@
 							</div>
 						</div>
 						<div class="acc__panel">
-							<p class="subtitle">A program that scrapes the popular movie review site to analyze film ratings, genre popularity, and director popularity. Explored the data and learned how to deal with missing data with imputation. </p>
+							<p class="subtitle">A program that scrapes the popular movie review site to analyze film ratings, genre popularity, and director popularity. Explored the data and learned how to deal with missing data with imputation.</p>
 							<div class="buttonrow">
 								<div class ="tagrow">
 									<div class="projecttag">Python</div>
@@ -230,7 +230,7 @@
 							</div>
 						</div>
 						<div class="acc__panel">
-							<p class="subtitle">A model that predicts car prices based on attributes such as fuel-efficiency, horsepower, weight, etc. Looked at the 25 predictors and ran two models, one including and one excluding categorial variables. Deduced that the three most important variables were horsepower, wheel-base, and width. </p>
+							<p class="subtitle">A model that predicts car prices based on attributes such as fuel-efficiency, horsepower, weight, etc. Looked at the 25 predictors and ran two models, one including and one excluding categorial variables. Deduced that the three most important variables were horsepower, wheel-base, and width. Model yielded an adjusted R-squared value of 0.84.</p>
 							<div class = "buttonrow">
 								<div class ="tagrow">
 									<div class="projecttag">Python</div>
