--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 							</div>
 						</div>
 						<div class="acc__panel">
-							<p class="subtitle">A program that scrapes the popular movie review site to analyze film ratings, genre popularity, and director popularity. Explored the data and learned how to deal with missing data with imputation.</p>
+							<p class="subtitle">A program that scrapes the popular movie review site to analyze film ratings, genre popularity, and director popularity. Explored the data with graph visualizations, imputed missing values, and dealt with outliers with z-score cutoffs.</p>
 							<div class="buttonrow">
 								<div class ="tagrow">
 									<div class="projecttag">Python</div>
