--- a/index.html
+++ b/index.html
@@ -195,24 +195,21 @@
 					<div class="projectArchive">
 						<div class="acc__title">
 							<div>
-								<h2>Museum Exhibit Display</h2>
-								<p class="subtitle_date">APRIL 2020</p>
+								<h2>Shortest Firetruck Route</h2>
+								<p class="subtitle_date">MARCH 2020</p>
 							</div>
 							<div class="dropdownArrow">
 								<a class="fa fa-angle-down custom-down"></a>
 							</div>
 						</div>
 						<div class="acc__panel">
-							<p class="subtitle">A site for Stephen Kaltenbach's exhibit at the Manetti Shrem Museum.</p>
+							<p class="subtitle">A program that simulates city roads with speed limits and locations for four fire stations. Dijkstra's algorithm is applied to the city map and CPU times are outputted. Fastest time recorded for a city size of 1000 blocks and 150,000 streets was 0.35 seconds.</p>
 							<div class = "buttonrow">
 								<div class ="tagrow">
-									<div class="projecttag">HTML</div>
-									<div class="projecttag">CSS</div>
-									<div class="projecttag">JavaScript</div>
+									<div class="projecttag">C++</div>
 								</div>
 								<div class="projectbuttons">
-									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/museum-website"></a>
-									<a class="fas fa-external-link-alt zoom" href="https://shore-conscious-supply.glitch.me/"></a>
+									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/dijkstra-firetruck-route"></a>
 								</div>
 							</div>
 						</div>
