--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 							</div>
 						</div>
 						<div class="acc__panel">
-							<p class="subtitle">A program that simulates city roads with speed limits and locations for four fire stations. Dijkstra's algorithm is applied to the city map to find the shortest path from each of the fire stations to all city coordinates. Fastest execution time recorded for a city size of 1000 blocks and 150,000 streets was 0.34 seconds.</p>
+							<p class="subtitle">A program that simulates city roads with speed limits and locations for four fire stations. Dijkstra's algorithm is applied to the map to find the shortest path from each of the fire stations to all city coordinates. Fastest execution time recorded for a city size of 1000 blocks and 150,000 streets was 0.34 seconds.</p>
 							<div class = "buttonrow">
 								<div class ="tagrow">
 									<div class="projecttag">C++</div>
