--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 							</div>
 						</div>
 						<div class="acc__panel">
-							<p class="subtitle">A model that predicts fruit names based on mass, width, height, and color. Used logistic regression and decision trees to build models. Plotted decision boundaries to compare each model and concluded that decision trees created better boundaries between apples, oranges, mandarins, and lemons. The decision tree and logistic regression models achieved 84% and 75% accuracy rates respectively.</p>
+							<p class="subtitle">A model that predicts fruit names based on mass, width, height, and color. Used logistic regression and decision trees to build models. Plotted decision boundaries to compare each model. The decision tree and logistic regression models achieved 84% and 75% accuracy rates respectively.</p>
 							<div class="buttonrow">
 								<div class ="tagrow">
 									<div class="projecttag">Python</div>
