--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 							</div>
 						</div>
 						<div class="acc__panel">
-							<p class="subtitle">A model that predicts car prices based on attributes such as fuel-efficiency, horsepower, weight, etc. Looked at the 25 predictors and ran two models, one including and one excluding categorial variables. Deduced that the three most important variables were horsepower, wheel-base, and width. Model yielded an adjusted R-squared value of 0.84.</p>
+							<p class="subtitle">A model that predicts car prices based on attributes such as fuel-efficiency, horsepower, weight, etc. Looked at the 25 predictors and ran two models to include and exclude categorial variables. Top predictors were horsepower, wheel-base, and width. Model yielded an adjusted R-squared value of 0.84.</p>
 							<div class = "buttonrow">
 								<div class ="tagrow">
 									<div class="projecttag">Python</div>
