--- a/index.html
+++ b/index.html
@@ -337,6 +337,12 @@
 		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 		<script>
 		$(".acc__panel").hide();
+		if($(window).width()<=990){
+			$(".theme-switch").detach().appendTo('.theme-switch-wrapper-mobile')
+		}
+		else{
+			$(".theme-switch").detach().appendTo('.theme-switch-wrapper')
+		}
 		$(window).resize(function() {
 			if($(window).width()<=990){
 				$(".theme-switch").detach().appendTo('.theme-switch-wrapper-mobile')
