--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<a href="https://www.linkedin.com/in/benjamin-dinh/" class="fab fa-linkedin zoom"></a>
 			<a href="https://github.com/benjamin-dinh" class="fab fa-github zoom"></a>
 			<a href="https://www.behance.net/gallery/99370465/Personal-Art" class="fab fa-behance zoom"></a>
-			<a href="https://www.instagram.com/tiggersparty/" class="fab fa-instagram zoom"></a>
+			<!-- <a href="https://www.instagram.com/tiggersparty/" class="fab fa-instagram zoom"></a> -->
 			<a href="mailto:benjamindinh909@gmail.com" class="fa fa-envelope zoom"></a>
 			<div class="vl"></div>
 		</div>
@@ -322,7 +322,7 @@
 				<a href="https://www.linkedin.com/in/benjamin-dinh/" class="fab fa-linkedin zoom"></a>
 				<a href="https://github.com/benjamin-dinh" class="fab fa-github zoom"></a>
 				<a href="https://www.behance.net/benjamin-dinh" class="fab fa-behance zoom"></a>
-				<a href="https://www.instagram.com/tiggersparty/" class="fab fa-instagram zoom"></a>
+				<!-- <a href="https://www.instagram.com/tiggersparty/" class="fab fa-instagram zoom"></a> -->
 				<a href="mailto:benjamindinh909@gmail.com" class="fa fa-envelope zoom"></a>
 			</div>
 			<p id ="footerFont">© Benjamin Dinh 2020</p>
