--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 		<!-- meta tags -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="Benjamin Dinh's Personal Website">
+		<meta name="description" content="Benjamin Dinh's Personal Website">
+		<meta name="keywords" content="benjamin dinh, benjamin, benjamin-dinh, ben dinh, uc davis">
         
 		<!-- style -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
@@ -52,7 +53,7 @@
 			<a href="mailto:benjamindinh909@gmail.com" class="fa fa-envelope zoom"></a>
 			<div class="vl"></div>
 		</div>
-		
+
 		<section id="header">
 			<div id="headerText" class="fadein">
 			  	<h1>Hi, my name is 
