--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
 		</div>
 		<a id="work"></a>
 		<section>
-			<p id = "projectSectionTitle">RECENTS</p>
+			<p class = "projectSectionTitle">Recents</p>
 			<div id="projectContainer">
 				<div class="row">
 					<div class = "projectSelect">
 						<div>
 							<h2>Tweet Sentiment Analysis</h2>
 							<p class="subtitle_bold">An NLP model that classifies tweets based on polarity of opinion</p>
-							<p class="subtitle_date">DECEMBER 2020</p>
+							<p class="subtitle_date">December 2020</p>
 							<p class="subtitle">Cleaned, normalized, and tokenized US airline tweets and created a term frequency-inverse document frequency (TF-IDF) matrix. Split the data into testing/training sets and performed logistic regression. Yielded an overall 80% accuracy rate.</p>
 						</div>
 						<div class="buttonrow">
@@ -93,7 +93,7 @@
 						<div>
 							<h2>AggieFeed</h2>
 							<p class="subtitle_bold">An Android application that delivers the latest university news</p>
-							<p class="subtitle_date">JUNE 2020</p>
+							<p class="subtitle_date">June 2020</p>
 							<p class="subtitle">Accessed a REST API to render university events, meetings, announcements, and important dates. Any element can be tapped on to show a more detailed view. Utilized OkHTTP requests and GSON data mapping. Strengthened understanding of Android concepts such as activities, fragments, and intents.</p>
 						</div>
 						<div class="buttonrow">
@@ -113,7 +113,7 @@
 						<div>
 							<h2>includedavis.com</h2>
 							<p class="subtitle_bold">A user focused redesign of #include's club website</p>
-							<p class="subtitle_date">AUGUST 2020</p>
+							<p class="subtitle_date">August 2020</p>
 							<p class="subtitle">Communicated with the lead designer to understand necessary revisions to improve the usability, look, and feel of the old website. Worked with the back end director and achieved a new landing page, club calendar, testimonial section, and mobile responsivity. Achieved 50% increase in website traffic.</p>
 						</div>
 						<div class="buttonrow">
@@ -132,7 +132,7 @@
 						<div>
 							<h2>UC Davis Yearbook</h2>
 							<p class="subtitle_bold">A place to virtually store memories for the Class of 2020</p>
-							<p class="subtitle_date">MAY 2020</p>
+							<p class="subtitle_date">May 2020</p>
 							<p class="subtitle">Directed a group of 3 web developers in building a website where users can upload personal profiles onto a virtual yearbook. Developed wireframes and assessed the UI and UX for technical feasibility. Used React to make page components and learned how to utilize states and props. </p>
 						</div>
 						<div class="buttonrow">
@@ -151,14 +151,14 @@
 			</div>
 		</section>
 		<section id="archive">
-			<p id = "projectSectionTitle">MORE FUN PROJECTS</p>
+			<p class = "projectSectionTitle">More Fun Projects</p>
 			<div id = "projectArchiveContainer">
 				<div class="acc">
 					<div class="projectArchive">
 						<div class="acc__title">
 							<div>
 								<h2>Fruit Classification</h2>
-								<p class="subtitle_date">NOVEMBER 2020</p>
+								<p class="subtitle_date">November 2020</p>
 							</div>
 							<div class="dropdownArrow">
 								<a class="fa fa-angle-down custom-down"></a>
@@ -181,7 +181,7 @@
 						<div class="acc__title">
 							<div>
 								<h2>Automobile Price Predictor</h2>
-								<p class="subtitle_date">OCTOBER 2020</p>
+								<p class="subtitle_date">October 2020</p>
 							</div>
 							<div class="dropdownArrow">
 								<a class="fa fa-angle-down custom-down"></a>
@@ -205,7 +205,7 @@
 						<div class="acc__title">
 							<div>
 								<h2>IMDb Web Scraper</h2>
-								<p class="subtitle_date">OCTOBER 2020</p>
+								<p class="subtitle_date">October 2020</p>
 							</div>
 							<div class="dropdownArrow">
 								<a class="fa fa-angle-down custom-down"></a>
@@ -231,7 +231,7 @@
 						<div class="acc__title">
 							<div>
 								<h2>Postcard Creator</h2>
-								<p class="subtitle_date">APRIL 2020</p>
+								<p class="subtitle_date">April 2020</p>
 							</div>
 							<div class="dropdownArrow">
 								<a class="fa fa-angle-down custom-down"></a>
@@ -258,7 +258,7 @@
 						<div class="acc__title">
 							<div>
 								<h2>Shortest Firetruck Route</h2>
-								<p class="subtitle_date">MARCH 2020</p>
+								<p class="subtitle_date">March 2020</p>
 							</div>
 							<div class="dropdownArrow">
 								<a class="fa fa-angle-down custom-down"></a>
@@ -280,7 +280,7 @@
 						<div class="acc__title">
 							<div>
 								<h2>Spellchecker</h2>
-								<p class="subtitle_date">FEBRUARY 2020</p>
+								<p class="subtitle_date">February 2020</p>
 							</div>
 							<div class="dropdownArrow">
 								<a class="fa fa-angle-down custom-down"></a>
@@ -303,7 +303,7 @@
 		</section>
 		<a id="about"></a>
 		<section>
-			<p id = "projectSectionTitle">ABOUT ME</p>
+			<p class = "projectSectionTitle">About Me</p>
 			<div id="profileContainer">
 				<div id="profileText">
 					<h2 class="customsubtitle">Nice to meet you!</h2>
