--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 		<!-- meta tags -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta name="description" content="Benjamin Dinh's Personal Website">
+		<!-- <meta name="description" content="Benjamin Dinh's Personal Website"> -->
+		<meta name="description" content="Hi, I'm Benjamin Dinh and I'm a software developer. Welcome to my personal website!">
 		<meta name="keywords" content="benjamin dinh, benjamin, benjamin-dinh, ben dinh, uc davis">
         
 		<!-- style -->
