dark mode update

--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
 				</h1>
 				<a class="categorytag" id="headertag" href="mailto:benjamindinh909@gmail.com">Get In Touch</a>
 			</div>
+			<div class="arrow bounce">
+				<a href = "#work" class="fa fa-angle-down fa-3x"></a>
+			</div>
 		</section>
-		<div class="arrow bounce">
-			<a href = "#work" class="fa fa-angle-down fa-3x"></a>
-		</div>
-		<a id="work"></a>
+		<div id="work"></div>
 		<section>
 			<p class = "projectSectionTitle">Recents</p>
 			<div id="projectContainer">
@@ -302,7 +302,7 @@
 			  	</div>
 			</div>	
 		</section>
-		<a id="about"></a>
+		<div id="about"></div>
 		<section>
 			<p class = "projectSectionTitle">About Me</p>
 			<div id="profileContainer">
