--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			<a href="https://www.linkedin.com/in/benjamin-dinh/" class="fab fa-linkedin zoom"></a>
 			<a href="https://github.com/benjamin-dinh" class="fab fa-github zoom"></a>
 			<a href="https://www.behance.net/gallery/99370465/Personal-Art" class="fab fa-behance zoom"></a>
-			<!-- <a href="https://www.instagram.com/tiggersparty/" class="fab fa-instagram zoom"></a> -->
+			<a href="https://www.instagram.com/tiggersparty/" class="fab fa-instagram zoom"></a>
 			<a href="mailto:benjamindinh909@gmail.com" class="fa fa-envelope zoom"></a>
 			<div class="vl"></div>
 		</div>
@@ -84,7 +84,46 @@
 								<div class="projecttag">Sklearn</div>
 							</div>
 							<div class="projectbuttons">
-								<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/tweet-sentiment-analysis/blob/main/tweet_sentiment_analysis.ipynb"></a>
+								<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/tweet-sentiment-analysis/"></a>
+							</div>
+						</div>
+					</div>
+					<div class = "projectSelect">
+						<div>
+							<h2>Tuberculosis Drug Resistance</h2>
+							<p class="subtitle_bold">A model that analyzes gene mutation signals for drug resistance</p>
+							<p class="subtitle_date">Fall 2020</p>
+							<p class="subtitle">Worked with 4 teammates to build 3 machine learning models that determine thresholds for gene mutation signals. Looked at whether molecular probes that detect these mutations yield high or low signals. Decision tree model achieved highest accuracy rate of 98%.</p>
+						</div>
+						<div class="buttonrow">
+							<div class ="tagrow">
+								<div class="projecttag">Python</div>
+								<div class="projecttag">Sklearn</div>
+								<div class="projecttag">Tensorflow</div>
+							</div>
+							<div class="projectbuttons">
+								<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/tuberculosis-drug-resistance"></a>
+							</div>
+						</div>
+					</div>	
+				</div>
+				<div class="row">
+					<div class = "projectSelect">
+						<div>
+							<h2>includedavis.com</h2>
+							<p class="subtitle_bold">A user focused redesign of #include's club website</p>
+							<p class="subtitle_date">Summer 2020</p>
+							<p class="subtitle">Communicated with the lead designer to understand necessary revisions to improve the usability, look, and feel of the old website. Worked with the back end director and achieved a new landing page, club calendar, testimonial section, and mobile responsivity. Achieved 50% increase in website traffic.</p>
+						</div>
+						<div class="buttonrow">
+							<div class ="tagrow">
+								<div class="projecttag">HTML</div>
+								<div class="projecttag">CSS</div>
+								<div class="projecttag">NodeJS</div>
+							</div>
+							<div class="projectbuttons">
+								<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/include-website"></a>
+								<a class="fas fa-external-link-alt zoom" href="https://include-website.herokuapp.com/"></a>
 							</div>
 						</div>
 					</div>
@@ -107,52 +146,37 @@
 						</div>
 					</div>
 				</div>
-				<div class="row">
-					<div class = "projectSelect">
-						<div>
-							<h2>includedavis.com</h2>
-							<p class="subtitle_bold">A user focused redesign of #include's club website</p>
-							<p class="subtitle_date">August 2020</p>
-							<p class="subtitle">Communicated with the lead designer to understand necessary revisions to improve the usability, look, and feel of the old website. Worked with the back end director and achieved a new landing page, club calendar, testimonial section, and mobile responsivity. Achieved 50% increase in website traffic.</p>
-						</div>
-						<div class="buttonrow">
-							<div class ="tagrow">
-								<div class="projecttag">HTML</div>
-								<div class="projecttag">CSS</div>
-								<div class="projecttag">NodeJS</div>
-							</div>
-							<div class="projectbuttons">
-								<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/include-website"></a>
-								<a class="fas fa-external-link-alt zoom" href="https://include-website.herokuapp.com/"></a>
-							</div>
-						</div>
-					</div>
-					<div class = "projectSelect">
-						<div>
-							<h2>UC Davis Yearbook</h2>
-							<p class="subtitle_bold">A place to virtually store memories for the Class of 2020</p>
-							<p class="subtitle_date">May 2020</p>
-							<p class="subtitle">Directed a group of 3 web developers in building a website where users can upload personal profiles onto a virtual yearbook. Developed wireframes and assessed the UI and UX for technical feasibility. Used React to make page components and learned how to utilize states and props. </p>
-						</div>
-						<div class="buttonrow">
-							<div class ="tagrow">
-								<div class="projecttag">ReactJS</div>
-								<div class="projecttag">NodeJS</div>
-								<div class="projecttag">Figma</div>
-							</div>
-							<div class="projectbuttons">
-								<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/ucdavis-yearbook"></a>
-								<a class="fas fa-external-link-alt zoom" href="https://hazel-boundless-yearbook.glitch.me"></a>
-							</div>
-						</div>
-					</div>
-				</div>
 			</div>
 		</section>
 		<section id="archive">
 			<p class = "projectSectionTitle">More Fun Projects</p>
 			<div id = "projectArchiveContainer">
 				<div class="acc">
+					<div class="projectArchive">
+						<div class="acc__title">
+							<div>
+								<h2>Personal Website</h2>
+								<p class="subtitle_date">December 2020</p>
+							</div>
+							<div class="dropdownArrow">
+								<a class="fa fa-angle-down custom-down"></a>
+							</div>
+						</div>
+						<div class="acc__panel">
+							<p class="subtitle">A portfolio site where I can express myself visually and play around with new design trends. Achieved 300% increase in monthly impressions and clicks after website redesign.</p>
+							<div class="buttonrow">
+								<div class ="tagrow">
+									<div class="projecttag">HTML</div>
+									<div class="projecttag">CSS</div>
+									<div class="projecttag">Javascript</div>
+									<div class="projecttag">Figma</div>
+								</div>
+								<div class="projectbuttons">
+									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/benjamin-dinh.github.io"></a>
+								</div>
+							</div>
+						</div>
+					</div>
 					<div class="projectArchive">
 						<div class="acc__title">
 							<div>
@@ -171,7 +195,7 @@
 									<div class="projecttag">Sklearn</div>
 								</div>
 								<div class="projectbuttons">
-									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/fruit-classification/blob/main/fruit_classification.ipynb"></a>
+									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/fruit-classification/"></a>
 								</div>
 							</div>
 						</div>
@@ -195,7 +219,7 @@
 									<div class="projecttag">Sklearn</div>
 								</div>
 								<div class="projectbuttons">
-									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/automobile-price-regression/blob/main/regression_models.ipynb"></a>
+									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/automobile-price-regression/"></a>
 								</div>
 							</div>
 						</div>
@@ -218,14 +242,39 @@
 									<div class="projecttag">BeautifulSoup</div>
 								</div>
 								<div class="projectbuttons">
-									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/imdb-webscraper/blob/main/imdb_webscraper.ipynb"></a>
+									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/imdb-webscraper/"></a>
 								</div>
 							</div>
 						</div>
 					</div>
-					
 			  	</div>
 				<div class="acc">
+					<div class="projectArchive">
+						<div class="acc__title">
+							<div>
+								<h2>UC Davis Yearbook</h2>
+								<p class="subtitle_date">May 2020</p>
+							</div>
+							<div class="dropdownArrow">
+								<a class="fa fa-angle-down custom-down"></a>
+							</div>
+						</div>
+						<div class="acc__panel">
+							<p class="subtitle">Directed a group of 3 web developers in building a website where users can upload personal profiles onto a virtual yearbook. Developed wireframes and assessed the UI and UX for technical feasibility. Used React to make page components and learned how to utilize states and props. </p>
+							<div class="buttonrow">
+								<div class ="tagrow">
+									<div class="projecttag">ReactJS</div>
+									<div class="projecttag">NodeJS</div>
+									<div class="projecttag">CSS</div>
+									<div class="projecttag">Figma</div>
+								</div>
+								<div class="projectbuttons">
+									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/ucdavis-yearbook"></a>
+									<a class="fas fa-external-link-alt zoom" href="https://hazel-boundless-yearbook.glitch.me"></a>
+								</div>
+							</div>
+						</div>
+					</div>
 					<div class="projectArchive">
 						<div class="acc__title">
 							<div>
@@ -322,7 +371,7 @@
 				<a href="https://www.linkedin.com/in/benjamin-dinh/" class="fab fa-linkedin zoom"></a>
 				<a href="https://github.com/benjamin-dinh" class="fab fa-github zoom"></a>
 				<a href="https://www.behance.net/benjamin-dinh" class="fab fa-behance zoom"></a>
-				<!-- <a href="https://www.instagram.com/tiggersparty/" class="fab fa-instagram zoom"></a> -->
+				<a href="https://www.instagram.com/tiggersparty/" class="fab fa-instagram zoom"></a>
 				<a href="mailto:benjamindinh909@gmail.com" class="fa fa-envelope zoom"></a>
 			</div>
 			<p id ="footerFont">© Benjamin Dinh 2020</p>
