--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 							</div>
 						</div>
 						<div class="acc__panel">
-							<p class="subtitle">A model that predicts fruit names based on mass, width, height, and color. Used logistic regression and decision trees to build models. Plotted decision boundaries to compare each model. The decision tree and logistic regression models achieved 84% and 75% accuracy rates respectively.</p>
+							<p class="subtitle">Decision tree and logistic regression models that predict fruit names based on mass, width, height, and color. Plotted decision boundaries to compare each model. The decision tree and logistic regression models achieved 84% and 75% accuracy rates respectively.</p>
 							<div class="buttonrow">
 								<div class ="tagrow">
 									<div class="projecttag">Python</div>
@@ -211,7 +211,7 @@
 							</div>
 						</div>
 						<div class="acc__panel">
-							<p class="subtitle">A model that predicts car prices based on attributes such as fuel-efficiency, horsepower, weight, etc. Looked at the 25 predictors and ran two models to include and exclude categorial variables. Top predictors were horsepower, wheel-base, and width. Model yielded an adjusted R-squared value of 0.84.</p>
+							<p class="subtitle">Regression models that predict car prices based on attributes such as fuel-efficiency, horsepower, weight, etc. Looked at the 25+ predictors and ran two models to include and exclude categorial variables. Top predictors were horsepower, wheel-base, and width. Model yielded an adjusted R-squared value of 0.84.</p>
 							<div class = "buttonrow">
 								<div class ="tagrow">
 									<div class="projecttag">Python</div>
