--- a/index.html
+++ b/index.html
@@ -72,6 +72,24 @@
 				<div class="row">
 					<div class = "projectSelect">
 						<div>
+							<h2>Tuberculosis Drug Resistance</h2>
+							<p class="subtitle_bold">A model that analyzes gene mutation signals for drug resistance</p>
+							<p class="subtitle_date">Fall 2020</p>
+							<p class="subtitle">Worked with 4 teammates to build 3 machine learning models that determine thresholds for gene mutation signals. Looked at whether molecular probes that detect these mutations yield high or low signals. Decision tree model achieved highest accuracy rate of 99%.</p>
+						</div>
+						<div class="buttonrow">
+							<div class ="tagrow">
+								<div class="projecttag">Python</div>
+								<div class="projecttag">Sklearn</div>
+								<div class="projecttag">Tensorflow</div>
+							</div>
+							<div class="projectbuttons">
+								<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/tuberculosis-drug-resistance"></a>
+							</div>
+						</div>
+					</div>	
+					<div class = "projectSelect">
+						<div>
 							<h2>Tweet Sentiment Analysis</h2>
 							<p class="subtitle_bold">An NLP model that classifies tweets based on polarity of opinion</p>
 							<p class="subtitle_date">December 2020</p>
@@ -88,60 +106,44 @@
 							</div>
 						</div>
 					</div>
-					<div class = "projectSelect">
-						<div>
-							<h2>Tuberculosis Drug Resistance</h2>
-							<p class="subtitle_bold">A model that analyzes gene mutation signals for drug resistance</p>
-							<p class="subtitle_date">Fall 2020</p>
-							<p class="subtitle">Worked with 4 teammates to build 3 machine learning models that determine thresholds for gene mutation signals. Looked at whether molecular probes that detect these mutations yield high or low signals. Decision tree model achieved highest accuracy rate of 98%.</p>
-						</div>
-						<div class="buttonrow">
-							<div class ="tagrow">
-								<div class="projecttag">Python</div>
-								<div class="projecttag">Sklearn</div>
-								<div class="projecttag">Tensorflow</div>
-							</div>
-							<div class="projectbuttons">
-								<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/tuberculosis-drug-resistance"></a>
-							</div>
-						</div>
-					</div>	
 				</div>
 				<div class="row">
 					<div class = "projectSelect">
 						<div>
-							<h2>includedavis.com</h2>
-							<p class="subtitle_bold">A user focused redesign of #include's club website</p>
-							<p class="subtitle_date">Summer 2020</p>
-							<p class="subtitle">Communicated with the lead designer to understand necessary revisions to improve the usability, look, and feel of the old website. Worked with the back end director and achieved a new landing page, club calendar, testimonial section, and mobile responsivity. Achieved 50% increase in website traffic.</p>
-						</div>
-						<div class="buttonrow">
-							<div class ="tagrow">
-								<div class="projecttag">HTML</div>
-								<div class="projecttag">CSS</div>
-								<div class="projecttag">NodeJS</div>
-							</div>
-							<div class="projectbuttons">
-								<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/include-website"></a>
-								<a class="fas fa-external-link-alt zoom" href="https://include-website.herokuapp.com/"></a>
-							</div>
-						</div>
-					</div>
-					<div class = "projectSelect">
-						<div>
 							<h2>AggieFeed</h2>
-							<p class="subtitle_bold">An Android application that delivers the latest university news</p>
+							<p class="subtitle_bold">An Android application that delivers the latest university news.</p>
 							<p class="subtitle_date">June 2020</p>
 							<p class="subtitle">Accessed a REST API to render university events, meetings, announcements, and important dates. Any element can be tapped on to show a more detailed view. Utilized OkHTTP requests and GSON data mapping. Strengthened understanding of Android concepts such as activities, fragments, and intents.</p>
 						</div>
 						<div class="buttonrow">
 							<div class ="tagrow">
+								<div class="projecttag">Android Studio</div>
 								<div class="projecttag">Kotlin</div>
 								<div class="projecttag">OkHTTP</div>
 								<div class="projecttag">GSON</div>
 							</div>
 							<div class="projectbuttons">
 								<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/IETAndroidAppProject"></a>
+							</div>
+						</div>
+					</div>
+					<div class = "projectSelect">
+						<div>
+							<h2>UC Davis Yearbook</h2>
+							<p class="subtitle_bold">A virtual place to store memories for the graduating class</p>
+							<p class="subtitle_date">May 2020</p>
+							<p class="subtitle">Directed a group of 3 web developers in building a website where users can log in and upload personal profiles onto a virtual yearbook. Developed wireframes and assessed the user interface for technical feasibility. Built a profile feed that can be filtered by college, major, name, etc.</p>
+						</div>
+						<div class="buttonrow">
+							<div class ="tagrow">
+								<div class="projecttag">ReactJS</div>
+								<div class="projecttag">NodeJS</div>
+								<div class="projecttag">CSS</div>
+								<div class="projecttag">Figma</div>
+							</div>
+							<div class="projectbuttons">
+								<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/ucdavis-yearbook"></a>
+								<a class="fas fa-external-link-alt zoom" href="https://hazel-boundless-yearbook.glitch.me"></a>
 							</div>
 						</div>
 					</div>
@@ -211,7 +213,7 @@
 							</div>
 						</div>
 						<div class="acc__panel">
-							<p class="subtitle">Regression models that predict car prices based on attributes such as fuel-efficiency, horsepower, weight, etc. Looked at the 25+ predictors and ran two models to include and exclude categorial variables. Top predictors were horsepower, wheel-base, and width. Model yielded an adjusted R-squared value of 0.84.</p>
+							<p class="subtitle">Regression models that predict car prices based on attributes such as fuel-efficiency, horsepower, weight, etc. Looked at the 25+ predictors and built various regression models. Polynomial regression yielded the highest adjusted R-squared value of 0.84.</p>
 							<div class = "buttonrow">
 								<div class ="tagrow">
 									<div class="projecttag">Python</div>
@@ -252,25 +254,24 @@
 					<div class="projectArchive">
 						<div class="acc__title">
 							<div>
-								<h2>UC Davis Yearbook</h2>
-								<p class="subtitle_date">May 2020</p>
+								<h2>includedavis.com</h2>
+								<p class="subtitle_date">August 2020</p>
 							</div>
 							<div class="dropdownArrow">
 								<a class="fa fa-angle-down custom-down"></a>
 							</div>
 						</div>
 						<div class="acc__panel">
-							<p class="subtitle">Directed a group of 3 web developers in building a website where users can upload personal profiles onto a virtual yearbook. Developed wireframes and assessed the UI and UX for technical feasibility. Used React to make page components and learned how to utilize states and props. </p>
+							<p class="subtitle">Communicated with the lead designer to understand necessary revisions to improve the usability, look, and feel of the old website. Worked with the back end director and achieved a new landing page, club calendar, testimonial section, and mobile responsivity. Achieved 50% increase in website traffic.</p>
 							<div class="buttonrow">
 								<div class ="tagrow">
-									<div class="projecttag">ReactJS</div>
-									<div class="projecttag">NodeJS</div>
+									<div class="projecttag">HTML</div>
 									<div class="projecttag">CSS</div>
-									<div class="projecttag">Figma</div>
+									<div class="projecttag">NodeJS</div>
 								</div>
 								<div class="projectbuttons">
-									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/ucdavis-yearbook"></a>
-									<a class="fas fa-external-link-alt zoom" href="https://hazel-boundless-yearbook.glitch.me"></a>
+									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/include-website"></a>
+									<a class="fas fa-external-link-alt zoom" href="https://include-website.herokuapp.com/"></a>
 								</div>
 							</div>
 						</div>
