--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 							</div>
 						</div>
 						<div class="acc__panel">
-							<p class="subtitle">Regression models that predict car prices based on attributes such as fuel-efficiency, horsepower, weight, etc. Looked at the 25+ predictors and built various regression models. Polynomial regression yielded the highest adjusted R-squared value of 0.84.</p>
+							<p class="subtitle">Regression models that predict car prices based on attributes such as fuel-efficiency, horsepower, weight, etc. Looked at the 25+ predictors and utilized cross validation to determine negligible predictors. Polynomial regression yielded the highest adjusted R-squared value of 0.84.</p>
 							<div class = "buttonrow">
 								<div class ="tagrow">
 									<div class="projecttag">Python</div>
