--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css">
 	
 		<title>Benjamin Dinh</title>
-		<link rel="icon" href="assets/faviconnew.png">
+		<link rel="icon" href="assets/favicon.ico">
     </head>
     
 	<body>
