revised project descriptions

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 							</div>
 						</div>
 						<div class="acc__panel">
-							<p class="subtitle">An implementation of the trie data stucture to detect mispelled words. A trie dictionary is first created from clean text, such as a book. Then, input from other text can be passed into the trie to detect misspellings and predict intended words.</p>
+							<p class="subtitle">An implementation of the trie data stucture to detect misspelled words. A trie dictionary is first created from clean text, such as a book. Then, input from other text can be passed into the trie to detect misspellings and predict intended words.</p>
 							<div class="buttonrow">
 								<div class ="tagrow">
 									<div class="projecttag">C++</div>
