project description update

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 					<div class = "projectSelect">
 						<div>
 							<h2>AggieFeed</h2>
-							<p class="subtitle_bold">An Android application that delivers the latest university news.</p>
+							<p class="subtitle_bold">An Android application that delivers the latest university news</p>
 							<p class="subtitle_date">June 2020</p>
 							<p class="subtitle">Accessed a REST API to render university events, meetings, announcements, and important dates. Any element can be tapped on to show a more detailed view. Utilized OkHTTP requests and GSON data mapping. Strengthened understanding of Android concepts such as activities, fragments, and intents.</p>
 						</div>
@@ -130,7 +130,7 @@
 					<div class = "projectSelect">
 						<div>
 							<h2>UC Davis Yearbook</h2>
-							<p class="subtitle_bold">A virtual place to store memories for the graduating class</p>
+							<p class="subtitle_bold">A virtual place to store memories for the graduating class of 2020</p>
 							<p class="subtitle_date">May 2020</p>
 							<p class="subtitle">Directed a group of 3 web developers in building a website where users can log in and upload personal profiles onto a virtual yearbook. Developed wireframes and assessed the user interface for technical feasibility. Built a profile feed that can be filtered by college, major, name, etc.</p>
 						</div>
