--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 				<a href="https://www.instagram.com/tiggersparty/" class="fab fa-instagram zoom"></a>
 				<a href="mailto:benjamindinh909@gmail.com" class="fa fa-envelope zoom"></a>
 			</div>
-			<p id ="footerFont">© Benjamin Dinh 2020</p>
+			<p id ="footerFont">© Benjamin Dinh <span id="year"></span></p>
 		</section>
 		
 		<script src="script.js"></script>
