--- a/index.html
+++ b/index.html
@@ -157,6 +157,32 @@
 					<div class="projectArchive">
 						<div class="acc__title">
 							<div>
+								<h2>MealBuddies</h2>
+								<p class="subtitle_date">January 2020</p>
+							</div>
+							<div class="dropdownArrow">
+								<a class="fa fa-angle-down custom-down"></a>
+							</div>
+						</div>
+						<div class="acc__panel">
+							<p class="subtitle">Managed a team of 4 designers and developers in launching an online platform that targets food insecurity in Yolo County. Used a Firebase Realtime Database to store information about local food distributions, open pantries, restaurant giveaways, etc.</p>
+							<div class="buttonrow">
+								<div class ="tagrow">
+									<div class="projecttag">HTML</div>
+									<div class="projecttag">CSS</div>
+									<div class="projecttag">NodeJS</div>
+									<div class="projecttag">Firebase</div>
+								</div>
+								<div class="projectbuttons">
+									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/MealBuddies"></a>
+									<a class="fas fa-external-link-alt zoom" href="https://mealbuddies.herokuapp.com/"></a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="projectArchive">
+						<div class="acc__title">
+							<div>
 								<h2>Personal Website</h2>
 								<p class="subtitle_date">December 2020</p>
 							</div>
@@ -202,6 +228,8 @@
 							</div>
 						</div>
 					</div>
+			  	</div>
+				<div class="acc">
 					<div class="projectArchive">
 						<div class="acc__title">
 							<div>
@@ -226,31 +254,6 @@
 							</div>
 						</div>
 					</div>
-			  	</div>
-				<div class="acc">
-					<div class="projectArchive">
-						<div class="acc__title">
-							<div>
-								<h2>IMDb Web Scraper</h2>
-								<p class="subtitle_date">October 2020</p>
-							</div>
-							<div class="dropdownArrow">
-								<a class="fa fa-angle-down custom-down"></a>
-							</div>
-						</div>
-						<div class="acc__panel">
-							<p class="subtitle">A program that scrapes the popular movie review site to analyze film ratings, genre popularity, and director popularity. Explored the data with graph visualizations, imputed missing values, and dealt with outliers with z-score cutoffs.</p>
-							<div class="buttonrow">
-								<div class ="tagrow">
-									<div class="projecttag">Python</div>
-									<div class="projecttag">BeautifulSoup</div>
-								</div>
-								<div class="projectbuttons">
-									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/imdb-webscraper/"></a>
-								</div>
-							</div>
-						</div>
-					</div>
 					<div class="projectArchive">
 						<div class="acc__title">
 							<div>
@@ -262,7 +265,7 @@
 							</div>
 						</div>
 						<div class="acc__panel">
-							<p class="subtitle">Communicated with the lead designer to understand necessary revisions to improve the usability, look, and feel of the old website. Worked with the back end director and achieved a new landing page, club calendar, testimonial section, and mobile responsivity. Achieved 50% increase in website traffic.</p>
+							<p class="subtitle">Communicated with the lead designer to understand necessary revisions to improve the usability, look, and feel of the old website. Worked with the back end director and achieved a new landing page, club calendar, testimonial section, and mobile responsivity. Achieved 150% increase in website traffic.</p>
 							<div class="buttonrow">
 								<div class ="tagrow">
 									<div class="projecttag">HTML</div>
