--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 							</div>
 							<div class="projectbuttons">
 								<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/ucdavis-yearbook"></a>
-								<a class="fas fa-external-link-alt zoom" href="https://hazel-boundless-yearbook.glitch.me"></a>
+								<!-- <a class="fas fa-external-link-alt zoom" href="https://hazel-boundless-yearbook.glitch.me"></a> -->
 							</div>
 						</div>
 					</div>
@@ -175,7 +175,7 @@
 								</div>
 								<div class="projectbuttons">
 									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/MealBuddies"></a>
-									<a class="fas fa-external-link-alt zoom" href="https://mealbuddies.herokuapp.com/"></a>
+									<!-- <a class="fas fa-external-link-alt zoom" href="https://mealbuddies.herokuapp.com/"></a> -->
 								</div>
 							</div>
 						</div>
@@ -274,7 +274,7 @@
 								</div>
 								<div class="projectbuttons">
 									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/include-website"></a>
-									<a class="fas fa-external-link-alt zoom" href="https://include-website.herokuapp.com/"></a>
+									<!-- <a class="fas fa-external-link-alt zoom" href="https://include-website.herokuapp.com/"></a> -->
 								</div>
 							</div>
 						</div>
