mobile responsive edits

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
 		<div id="rightIcons">
 			<a href="https://www.linkedin.com/in/benjamin-dinh/" class="fab fa-linkedin zoom"></a>
 			<a href="https://github.com/benjamin-dinh" class="fab fa-github zoom"></a>
-			<a href="https://www.behance.net/gallery/99370465/Personal-Art" class="fab fa-behance zoom"></a>
 			<a href="https://www.instagram.com/tiggersparty/" class="fab fa-instagram zoom"></a>
 			<a href="mailto:benjamindinh909@gmail.com" class="fa fa-envelope zoom"></a>
 			<div class="vl"></div>
@@ -75,7 +74,7 @@
 							<h2>Tuberculosis Drug Resistance</h2>
 							<p class="subtitle_bold">A model that analyzes gene mutation signals for drug resistance</p>
 							<p class="subtitle_date">Fall 2020</p>
-							<p class="subtitle">Worked with 4 teammates to build 3 machine learning models that determine thresholds for gene mutation signals. Looked at whether molecular probes that detect these mutations yield high or low signals. Decision tree model achieved highest accuracy rate of 99%.</p>
+							<p class="subtitle">Built 3 machine learning models that determine thresholds for gene mutation signals. Looked at whether molecular probes that detect these mutations yield high or low signals. Decision tree model achieved highest accuracy rate of 99%.</p>
 						</div>
 						<div class="buttonrow">
 							<div class ="tagrow">
@@ -98,8 +97,8 @@
 						<div class="buttonrow">
 							<div class ="tagrow">
 								<div class="projecttag">Python</div>
-								<div class="projecttag">NLTK</div>
 								<div class="projecttag">Sklearn</div>
+								<div class="projecttag">NLTK</div>
 							</div>
 							<div class="projectbuttons">
 								<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/tweet-sentiment-analysis/"></a>
@@ -113,7 +112,7 @@
 							<h2>AggieFeed</h2>
 							<p class="subtitle_bold">An Android application that delivers the latest university news</p>
 							<p class="subtitle_date">June 2020</p>
-							<p class="subtitle">Accessed a REST API to render university events, meetings, announcements, and important dates. Any element can be tapped on to show a more detailed view. Utilized OkHTTP requests and GSON data mapping. Strengthened understanding of Android concepts such as activities, fragments, and intents.</p>
+							<p class="subtitle">Accessed a REST API to render 25+ university events, articles, announcements, and important dates. Any element can be tapped on to show a more detailed view. Utilized OkHTTP requests and GSON data mapping.</p>
 						</div>
 						<div class="buttonrow">
 							<div class ="tagrow">
@@ -143,7 +142,7 @@
 							</div>
 							<div class="projectbuttons">
 								<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/ucdavis-yearbook"></a>
-								<!-- <a class="fas fa-external-link-alt zoom" href="https://hazel-boundless-yearbook.glitch.me"></a> -->
+								<a class="fas fa-external-link-alt zoom desktop-only" href="https://hazel-boundless-yearbook.glitch.me"></a>
 							</div>
 						</div>
 					</div>
@@ -175,7 +174,7 @@
 								</div>
 								<div class="projectbuttons">
 									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/meal-buddies"></a>
-									<!-- <a class="fas fa-external-link-alt zoom" href="https://mealbuddies.herokuapp.com/"></a> -->
+									<a class="fas fa-external-link-alt zoom desktop-only" href="https://mealbuddies.herokuapp.com/"></a>
 								</div>
 							</div>
 						</div>
@@ -245,8 +244,8 @@
 							<div class = "buttonrow">
 								<div class ="tagrow">
 									<div class="projecttag">Python</div>
-									<div class="projecttag">Statsmodels</div>
 									<div class="projecttag">Sklearn</div>
+									<div class="projecttag">Statsmodels</div>
 								</div>
 								<div class="projectbuttons">
 									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/automobile-price-regression/"></a>
@@ -274,7 +273,7 @@
 								</div>
 								<div class="projectbuttons">
 									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/include-website"></a>
-									<!-- <a class="fas fa-external-link-alt zoom" href="https://include-website.herokuapp.com/"></a> -->
+									<a class="fas fa-external-link-alt zoom desktop-only" href="https://include-website.herokuapp.com/"></a>
 								</div>
 							</div>
 						</div>
@@ -325,7 +324,6 @@
 			<div id="bottomIcons">
 				<a href="https://www.linkedin.com/in/benjamin-dinh/" class="fab fa-linkedin zoom"></a>
 				<a href="https://github.com/benjamin-dinh" class="fab fa-github zoom"></a>
-				<a href="https://www.behance.net/benjamin-dinh" class="fab fa-behance zoom"></a>
 				<a href="https://www.instagram.com/tiggersparty/" class="fab fa-instagram zoom"></a>
 				<a href="mailto:benjamindinh909@gmail.com" class="fa fa-envelope zoom"></a>
 			</div>
