updated github links

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 							<h2>UC Davis Yearbook</h2>
 							<p class="subtitle_bold">A virtual place to store memories for the graduating class of 2020</p>
 							<p class="subtitle_date">May 2020</p>
-							<p class="subtitle">Directed a group of 3 web developers in building a website where users can log in and upload personal profiles onto a virtual yearbook. Developed wireframes and assessed the user interface for technical feasibility. Built a profile feed that can be filtered by college, major, name, etc.</p>
+							<p class="subtitle">Directed 2 web developers in building a website where users can log in and upload personal profiles onto a virtual yearbook. Developed wireframes and assessed the user interface for technical feasibility. Built a profile feed that can be filtered by college, major, name, etc.</p>
 						</div>
 						<div class="buttonrow">
 							<div class ="tagrow">
