--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		</section>
 		<div id="work"></div>
 		<section>
-			<p class = "projectSectionTitle">Recents</p>
+			<p class = "projectSectionTitle">Work</p>
 			<div id="projectContainer">
 				<div class="row">
 					<div class = "projectSelect">
