project description update

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		</section>
 		<div id="work"></div>
 		<section>
-			<p class = "projectSectionTitle">Work</p>
+			<p class = "projectSectionTitle">Featured</p>
 			<div id="projectContainer">
 				<div class="row">
 					<div class = "projectSelect">
@@ -112,7 +112,7 @@
 							<h2>AggieFeed</h2>
 							<p class="subtitle_bold">An Android application that delivers the latest university news</p>
 							<p class="subtitle_date">June 2020</p>
-							<p class="subtitle">Accessed a REST API to render university events, articles, announcements, and important dates. Any element can be tapped on to show a more detailed view. Utilized OkHTTP requests and GSON data mapping.</p>
+							<p class="subtitle">Accessed a REST API to render university events, articles, announcements, and important dates. Any element can be tapped on to show a more detailed view. Utilized OkHTTP requests and GSON data mapping to generate feed content.</p>
 						</div>
 						<div class="buttonrow">
 							<div class ="tagrow">
@@ -164,7 +164,7 @@
 							</div>
 						</div>
 						<div class="acc__panel">
-							<p class="subtitle">Managed a team of 4 designers and developers in launching an online platform that targets food insecurity in Yolo County. Used a Firebase Realtime Database to store information about local food distributions, open pantries, restaurant giveaways, etc.</p>
+							<p class="subtitle">Managed a team of 2 designers and 2 developers in launching an online platform that targets food insecurity in Yolo County. Used a Firebase Realtime Database to store information about local food distributions, open pantries, restaurant giveaways, etc.</p>
 							<div class="buttonrow">
 								<div class ="tagrow">
 									<div class="projecttag">HTML</div>
