updated project descriptions

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 							<h2>AggieFeed</h2>
 							<p class="subtitle_bold">An Android application that delivers the latest university news</p>
 							<p class="subtitle_date">June 2020</p>
-							<p class="subtitle">Accessed a REST API to render university events, articles, announcements, and important dates. Any element can be tapped on to show a more detailed view. Utilized OkHTTP requests and GSON data mapping to generate feed content.</p>
+							<p class="subtitle">Accessed a REST API to render university events, articles, announcements, and important dates for the home feed. Any element can be tapped on to show a more detailed view. Utilized OkHTTP requests and GSON data mapping.</p>
 						</div>
 						<div class="buttonrow">
 							<div class ="tagrow">
